--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,10 @@
 		{
             "module_name": "@minecraft/server",
             "version": "1.10.0-beta"
-        }
+        },
+		{
+			"module_name": "@minecraft/server-net",
+			"version": "1.0.0-beta"
+		}
 	]
 }
