--- a/mcdb-server-backup/package.json
+++ b/mcdb-server-backup/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dom-parser": "^1.1.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "json2csv": "^6.0.0-alpha.2",
-    "multer": "^1.4.5-lts.1",
-    "xml-js": "^1.6.11"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
